# interface

./: .codeclimate.yml  .devcontainer.json  .dockerignore  .env.development  .env.production  .env.staging  .eslintrc.js  .gitignore  .remarkignore  .remarkrc.js  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  codegen.yml  cypress-docker-compose.yml  cypress.json  dev.Dockerfile  devcontainer.json  docker-compose.yml  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  jest.config.js  neon-law-cypress-docker-compose.yml  neon-law-cypress.Dockerfile  nginx.conf  package.json  pyproject.toml  staging.Dockerfile  staging.codegen.yml  staging.nginx.conf  tsconfig.json
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: codeql-analysis.yml  codeql_analysis.yml  continuous-integration.yml  continuous_integration.yml  delete-gcloud-images.yaml  delete_gcloud_images.yaml  development.yaml  docker_hub.yaml  docker_hub.yml  production.yaml  public_docker_images.yml  staging.yaml
@types/: express.d.ts
__mocks__/: gatsby.js
cypress/integration/: accessibility.spec.js  accessibility.spec.ts  blackLivesMatterHeader.spec.ts  blog.spec.js  (+10 more)
docker/: api.Dockerfile  api.entrypoint.sh  base.Dockerfile  cypress.Dockerfile  development.interface.Dockerfile  interface.command.sh  interface.entrypoint.sh  production.interface.Dockerfile  production.nginx.conf  shell.Dockerfile  shell.entrypoint.sh  staging.interface.Dockerfile
infrastructure/: README.md  package.json
neon_law/: __init__.py
src/: apiTypes.tsx  hooks.ts
tests/: test_neon_law_module.py
(+182 files in other folders)
