[tool.poetry]
name = "neon_law"
version = "0.1.0"
description = "Python modules to help Neon Law practice law."
authors = ["Neon Law <support@neonlaw.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
